# TiroEngine

./: .gitignore  README.md  docket.norg  meson.build  run.sh
.cache/clangd/index/: defines.h.32CB61020B3D742E.idx  files.c.894B22A54396A0B4.idx  files.h.E44B0C88E1C2C594.idx  main.c.FA22590A8CE68A84.idx  shader.c.B9610C0A65E3C90C.idx  shader.h.6B244EDA3D8D9F38.idx
src/: main.c
src/camera/: camera.c  camera.h
src/common/: defines.h  files.c  files.h
src/content/shaders/: fragment.glsl  vertex.glsl
src/math/: linalg.h  math.h  math_types.h
src/model/: model.c  model.h
src/shader/: shader.c  shader.h
src/texture/: texture.c  texture.h
